# imgui_rs

./: .gitmodules  Cargo.toml  README.md  build.rs  imgui_impl_win32_wrapper.hpp  wrapper.cpp
src/: lib.rs
